Bug fix: wrong color of cond 30~49

--- a/assets/main.css
+++ b/assets/main.css
@@ -41,7 +41,6 @@
   color: #F37B1D;
 }
 .poi-ship-cond-30 { /* cond 30~49 */
-  color: #FFC880;
 }
 .poi-ship-cond-50 { /* cond 50~100 */
   color: #FFFF40;
